Updated bib style and bib, wrote Introduction

--- a/References.bib
+++ b/References.bib
@@ -17849,7 +17849,7 @@ in Fula.},
 }
 
 @misc{brannen_uga_2018,
-	title = {{UGA} {Dining}},
+	title = {{UGA} {Dining}. {E}-mail},
 	abstract = {Hi Joshua,
  
 Dining Services decided on this name during the development of the dining hall on UGA’s Health Sciences Campus which focused on serving residents, students, and faculty/staff of that campus. Since that dining hall is smaller and a bit more unique than what is found on main campus, the department wanted students to feel as though they had found a special place or a place where they felt comfortable on campus. The Niche is a bit set apart from UGA’s other dining halls. When the Niche originally opened, it had a very specialized menu. It served grill, market, pizza, and gelato options that were not offered at the other dining halls. The department chose this name, therefore, to also reflect the location’s specialized menu and atmosphere.
@@ -17861,4 +17861,29 @@ Thanks,},
 	author = {Brannen, Allison},
 	month = nov,
 	year = {2018}
+}
+
+@misc{goren_uga_2017-1,
+	type = {Blog},
+	title = {{UGA} {Words} {You}’ve {Been} {Saying} {Wrong}},
+	url = {https://theblacksheeponline.com/georgia/5-uga-words-youve-saying-wrong},
+	abstract = {Too many of us fail to respect the UGA vernacular, mispronouncing the names of the people and places that make up our UGA family, which is plain not cool. How would you like it if your own family mispronounced your name? And I mean your whole family for once, not just your aunt’s shitty […]},
+	language = {English},
+	urldate = {2018-11-09},
+	journal = {The Black Sheep},
+	author = {Goren, Ben},
+	month = apr,
+	year = {2017}
+}
+
+@misc{noauthor_niche_2018,
+	title = {niche, n.},
+	url = {http://www.oed.com/view/Entry/126748},
+	language = {English},
+	urldate = {2018-11-13},
+	journal = {OED Online},
+	publisher = {Oxford University Press},
+	month = jul,
+	year = {2018},
+	file = {OED snapshot:C\:\\Users\\josh8\\Zotero\\storage\\NQRLZQSN\\126748.html:text/html}
 }
