Added caption to table 4

--- a/quant_meths_homework4/homework4.Rnw
+++ b/quant_meths_homework4/homework4.Rnw
@@ -84,7 +84,7 @@
     
     \begin{table}
       \centering
-      \caption{}
+      \caption{Shapiro-Wilk test for normality}
       \label{tab:anova_normality}
       <<anova_normality>>=
       @
