First and maybe final draft

--- a/quant_meths_project/References.bib
+++ b/quant_meths_project/References.bib
@@ -12261,13 +12261,13 @@ twelve cases of discontinuity which have been documented in the speech of Franco
 @incollection{brown_pronouns_1960,
 	address = {Cambridge, Mass},
 	title = {The {Pronouns} of {Power} and {Solidarity}},
-	language = {eng},
+	language = {English},
 	booktitle = {Style in {Language}},
-	publisher = {MIT Press},
+	publisher = {The MIT Press},
 	author = {Brown, Roger and Gilman, Albert},
 	editor = {Sebeok, Thomas Albert},
 	year = {1960},
-	keywords = {TECHNIQUE, LITTERATURE, STYLE},
+	keywords = {TECHNIQUE, LITTERATURE, STYLE, Read},
 	pages = {252--281},
 	file = {brown-gilman-pronouns.pdf:C\:\\Users\\josh8\\Zotero\\storage\\I4Q74IBH\\brown-gilman-pronouns.pdf:application/pdf}
 }
@@ -20560,4 +20560,43 @@ research.},
 	year = {2014},
 	pages = {125--136},
 	file = {SAGE PDF Full Text:C\:\\Users\\josh8\\Zotero\\storage\\XXMPHT9H\\Behizadeh - 2014 - Mitigating the Dangers of a Single Story Creating.pdf:application/pdf}
+}
+
+@article{daniel_o._price_measurement_1950,
+	title = {Measurement and {Prediction}. {Samuel} {A}. {Stouffer} {Louis} {Guttman} {Edward} {A}. {Suchman} {Paul} {F}. {Lazarsfeld} {Shirley} {A}. {Star} {John} {A}. {Clausen}},
+	volume = {29},
+	issn = {00377732},
+	url = {http://proxy-remote.galib.uga.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=edsjsr&AN=edsjsr.10.2307.2571672&site=eds-live},
+	doi = {10.2307/2571672},
+	number = {2},
+	urldate = {2019-04-11},
+	journal = {Social Forces},
+	author = {{Daniel O. Price}},
+	year = {1950},
+	keywords = {Library and Workshop},
+	pages = {207},
+	file = {EBSCO Full Text:C\:\\Users\\josh8\\Zotero\\storage\\J78EK3UL\\Daniel O. Price - 1950 - Measurement and Prediction. Samuel A. Stouffer Lou.pdf:application/pdf}
+}
+
+@book{stouffer_measurement_1950,
+	address = {Princeton, NJ, US},
+	series = {Measurement and prediction},
+	title = {Measurement and prediction. [{Studies} in social psychology in {World} {War} {II}. {Vol}.4.]},
+	abstract = {This fourth volume (see 24: 790, 791, 627) contains 16 chapters concerning (1) contributions to scaling and scale theory, (2) attitude and opinion measurement, (3) basis for scalogram analysis, (4) the scalogram board technique, (5) utility of scalogram analysis, (6) scalogram analysis and other techniques, (7) intensity component in attitude and opinion research, (8) reliability, (9) principle components of scale analysis, (10) logical and mathematical foundation of latent structure analysis, (11) interpretation and computation of some latent structures, (12) two cases studies in prediction, (13) screening of psychoneurotics in the army: technical development of tests and (14) comparison of psychiatric diagnoses and test scores, (15 and 16) postwar plans of soldiers. An appendix presents some notes on sampling and questionnaire administration by the Research Branch. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+	publisher = {Princeton University Press},
+	author = {Stouffer, Samuel A. and Guttman, Louis and Suchman, Edward A. and Lazarsfeld, Paul F. and Star, Shirley A. and Clausen, John A.},
+	year = {1950},
+	file = {Snapshot:C\:\\Users\\josh8\\Zotero\\storage\\SW97LKIV\\1951-03037-000.html:text/html}
+}
+
+@inproceedings{yuan_speaker_2008,
+	address = {Paris, FR},
+	title = {Speaker identification on the {SCOTUS} corpus},
+	abstract = {This paper reports the results of our experiments on speaker identification in the SCOTUS corpus, which includes oral arguments from the Supreme Court of the United States. Our main findings are as follows: 1) a combination of Gaussian mixture models and monophone HMM models attains near-100\% textindependent identification accuracy on utterances that are longer than one second; 2) the sampling rate of 11025 Hz achieves the best performance (higher sampling rates are harmful); and a sampling rate as low as 2000 Hz still achieves more than 90\% accuracy; 3) a distance score based on likelihood numbers was used to measure the variability of phones among speakers; we found that the most variable phone is the phone UH (as in good), and the velar nasal NG is more variable than the other two nasal sounds M and N; 4.) our models achieved “perfect” forced alignment on very long speech segments (40 minutes). These findings and their significance are discussed.},
+	language = {English},
+	author = {Yuan, Jiahong and Liberman, Mark},
+	year = {2008},
+	keywords = {Body of uterus, Experiment, Greater Than, Hidden Markov model, Mixture model, Sampling (signal processing), Spatial variability, Speaker recognition},
+	pages = {9687--9690},
+	file = {Full Text PDF:C\:\\Users\\josh8\\Zotero\\storage\\I56FXUUT\\Yuan et Liberman - 2007 - Speaker identification on the SCOTUS corpus.pdf:application/pdf}
 }
