--- a/quant_meths_project/nccfr_tv_present.Rnw
+++ b/quant_meths_project/nccfr_tv_present.Rnw
@@ -127,7 +127,7 @@
     \end{frame}
     \begin{frame}{Further Checks}
       \begin{block}{Stepdown selection}
-        Only gender was kept (AIC = \Sexpr{tv.glm.bw$aic})
+        Only gender was kept (AIC = \Sexpr{round(tv.glm.bw$aic, 3)})
       \end{block}
       \begin{block}<2->{Overfitting}
         Bootstrapping validation ($n$ = \Sexpr{tv.lrm.plus.val["Slope", "n"]}) suggests that the model is not overfit (Optimism of the slope = \Sexpr{round(tv.lrm.plus.val["Slope", "optimism"], 3)})
@@ -142,6 +142,14 @@
           \item where \emph{tu} is the reference level of T-V usage and
           \item female is the reference level of gender
         \end{itemize}
+      \end{block}
+      \begin{block}{}
+        \begin{table}
+          \caption{Proportion of \emph{tu} vs \emph{vous} by gender}
+          \label{tab:final_model_table}
+          <<final_model_table>>=
+          @
+        \end{table}
       \end{block}
     \end{frame}
   \section{References}
